--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,86 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
+}
+html{
+  font-size: 62.5%;
+}
+body{
+  background-color: #eee;
+}
+/* parent component decoration */
+.large-heading{
+  font-size: 4rem !important;
+}
+/* chlid component decoration */
+.card{
+  width: 300px;
+  height: 350px;
+  position: relative;
+}
+.card-img-top{
+  height: 80%;
+}
+.card-title{
+  font-size: 2.7rem;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+@media (min-width:992px) and (max-width:1200px){
+  .card{
+    width: 260px;
+    height: 300px;
+  }
+  .card-title{
+    font-size: 2.2rem;
+  }
+  
+}
+@media (min-width:768px) and (max-width:991px){
+  .card{
+    width: 280px;
+    height: 320px;
+  }
+  .card-title{
+    font-size: 2rem;
+  }
+}
+@media (min-width:576px) and (max-width:767px){
+  .card{
+    width: 245px;
+    height: 320px;
+  }
+  .card-title{
+    font-size: 2rem;
+  }
+}
+@media (min-width:456px) and (max-width:575px){
+  .card{
+    width: 265px;
+    height: 320px;
+  }
+  .card-title{
+    font-size: 2rem;
+  }
+}
+@media (max-width:455px){
+  .card{
+    width: 235px;
+    height: 320px;
+  }
+  .card-title{
+    font-size: 2rem;
+  }
+}
+@media (max-height:600px) and (orientation:landscape){
+  .card{
+    width: 330px;
+    height: 250px !important;
+    margin-bottom: 2rem;
+  }
+  .card-title{
+    font-size: 2rem;
+  }
+  
 }
